--- a/day23_imgcls.ipynb
+++ b/day23_imgcls.ipynb
@@ -189,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#参考 待调\n",
+    "#参考：1 TextCNN 2 手写字体识别 3 https://blog.csdn.net/qrlhl/article/details/78608985待调\n",
     "#不用tf，纯神经网络搭建两层待改\n",
     "\n"
    ]
