--- a/ministHandWriting.ipynb
+++ b/ministHandWriting.ipynb
@@ -11,7 +11,7 @@
     "* 池化运算的定义、种类（最大池化、平均池化等）、动机。\n",
     "* 利用CNN模型来识别手写字体。\n",
     "\n",
-    "本例图象识别模型cnn 精简解析版：\n",
+    "* 本例图象识别模型cnn 精简解析版：\n",
     "\n",
     "https://nbviewer.jupyter.org/github/huanwn111/tang/blob/master/ministHandWriting2.ipynb\n",
     "\n"
