--- a/ministHandWriting.ipynb
+++ b/ministHandWriting.ipynb
@@ -9,8 +9,7 @@
     "* 卷积运算的定义、动机（稀疏权重、参数共享、等变表示）。一维卷积运算和二维卷积运算。\n",
     "* 反卷积(tf.nn.conv2d_transpose)\n",
     "* 池化运算的定义、种类（最大池化、平均池化等）、动机。\n",
-    "* 利用CNN模型来识别手写字体。\n",
-    "\n"
+    "* 利用CNN模型来识别手写字体。\n\n",
     "* 本例图象识别模型cnn 精简解析版：\n",
     "https://nbviewer.jupyter.org/github/huanwn111/tang/blob/master/ministHandWriting2.ipynb\n",
     "\n"
