--- a/ministHandWriting.ipynb
+++ b/ministHandWriting.ipynb
@@ -10,8 +10,6 @@
     "* 反卷积(tf.nn.conv2d_transpose)\n",
     "* 池化运算的定义、种类（最大池化、平均池化等）、动机。\n",
     "* 利用CNN模型来识别手写字体。\n",
-    "* 本例图象识别模型cnn 精简解析版：\n",
-    "https://nbviewer.jupyter.org/github/huanwn111/tang/blob/master/ministHandWriting2.ipynb\n",
     "\n"
    ]
   },
@@ -357,6 +355,16 @@
     "        print(\"训练精确度：%.9f\" % train_acc)\n",
     "        #显示小数点位数%.3f 3位，注意前面不是%s.3f\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 本例图象识别模型cnn 精简解析版：\n",
+    "https://nbviewer.jupyter.org/github/huanwn111/tang/blob/master/ministHandWriting2.ipynb\n",
+    "\n"
    ]
   },
   {
