--- a/NN_img_all.ipynb
+++ b/NN_img_all.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ""
+      "Extracting whale/MinistData\\train-images-idx3-ubyte.gz\n",
+      "Extracting whale/MinistData\\train-labels-idx1-ubyte.gz\n",
+      "Extracting whale/MinistData\\t10k-images-idx3-ubyte.gz\n",
+      "Extracting whale/MinistData\\t10k-labels-idx1-ubyte.gz\n"
      ]
     }
    ],
@@ -26,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +37,11 @@
     "==CNN卷积神经网络 图象识别 精简骨架==\n",
     "'''\n",
     "\n",
-    "def CNN(inputs,output,FLAGS):\n",
-    "\n",
+    "def CNN(FLAGS):\n",
+    "    #输入输出初始化 x y\n",
+    "    inputs = tf.placeholder(dtype=tf.float32,shape=[None,FLAGS.image_width*FLAGS.image_height])\n",
+    "    output = tf.placeholder(dtype=tf.int32, shape=[None, FLAGS.num_classes])\n",
+    "    print(\"==CNN输入==\",inputs)\n",
     "    #==构造卷积神经网络==\n",
     "    #==第一层==\n",
     "    # 1、权重项初始化 w \n",
@@ -50,6 +56,7 @@
     "    # 3、第一层卷积 conv,用tf的tf.nn.conv2d()，relu激活函数在这一层加，下一步只用来浓缩卷积处理好的特征图\n",
     "    #取x整理\n",
     "    x_1 = tf.reshape(inputs,[-1,FLAGS.image_height,FLAGS.image_width,FLAGS.channel])\n",
+    "    print(\"==CNN输入变形最终一维==\",x_1)\n",
     "    #reshape特征拉平用于计算 wx 使维度匹配\n",
     "    conv_1 = tf.nn.conv2d(x_1,w_1,strides=[1,1,1,1],padding='SAME')\n",
     "    #conv_1 = tf.nn.relu(conv_1+b_1)\n",
@@ -125,12 +132,114 @@
     "    #算平均损失\n",
     "    accuracy = tf.reduce_mean(tf.cast(_corr,tf.float32))#cast类型转换 #'float' 换\n",
     "    \n",
-    "    return train_op,cost,accuracy#返回训练下降优化函数、损失函数、准确率计算函数"
+    "    return train_op,cost,accuracy,inputs,output#返回训练下降优化函数、损失函数、准确率计算函数"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#【以上做了几个优化，有利于提升模型精确度：\n",
+    "#关键处BUG修改：最后一层只需算完add+，即用于 softmax_cross_entropy_with_logits 交叉熵运算，\n",
+    "#不要先在外面加一层softmax】\n",
+    "#还做了以下几个优化\n",
+    "#b，由固定常数变为正态分布随机数random_normal([32],stddev=0.1\n",
+    "#b的+用了tf.nn.bias_add 最后一层用了tf.add，因为维度只有一维了\n",
+    "#epoch和batch_size的调整之类"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "==RNN循环神经网络 图象识别 精简骨架==\n",
+    "'''\n",
+    "from tensorflow.contrib import rnn\n",
+    "#图片28*28象素用LSTM记忆单元记忆前一时序列相关数据，\n",
+    "#思路：需将完整图切格成分散的序列，依次输入，人为制造前后相继的相关联性\n",
+    "\n",
+    "def RNN(FLAGS,_name):\n",
+    "    \n",
+    "     #定义维度\n",
+    "    diminput = FLAGS.image_width #输入维度图宽28\n",
+    "    nsteps = FLAGS.image_height #切分几份序列，也就是图高\n",
+    "    dimhidden = 128 #隐层神经元数定为128\n",
+    "    dimoutput = FLAGS.num_classes #输出10分类\n",
+    "    \n",
+    "    #==第一层，输入计算wx+b 切分序列==\n",
+    "    \n",
+    "    #定义输入输出参数纬度\n",
+    "    inputs = tf.placeholder('float',[None,nsteps*diminput])#shape (图高*宽 [?,28*28])输入不再是完整的图\n",
+    "    output = tf.placeholder('float',[None,dimoutput])\n",
+    "    \n",
+    "    print(\"==RNN 输入：==\",inputs)\n",
+    "    _X = tf.reshape(inputs,[-1,nsteps,diminput])\n",
+    "    #变形shape (图高,宽 [?,28,28])#输入图高宽分开，高要切分成多行序列打散输入\n",
+    "    print(\"==RNN 输入变形：==\",_X)\n",
+    "    _X = tf.transpose(_X,[1,0,2])\n",
+    "    #transpose维度换位置，即把中间28行换到前面 [28,?,28]，变28组，便于后面切分按行输入\n",
+    "    print(\"==RNN transpose inputs换位==\",_X)\n",
+    "    _X = tf.reshape(_X,[-1,diminput])\n",
+    "    #拉平变一维[?,28]，用于wx+b计算，保持图宽，特征列\n",
+    "    print('==RNN inputs reshape变形最终一维==',_X)\n",
+    "    \n",
+    "    w_h = tf.Variable(tf.random_normal([diminput,dimhidden]))#输入层与隐层计算用w 维度 输入28 输出128\n",
+    "    b_h = tf.Variable(tf.random_normal([dimhidden]))#输入层与隐层计算用b 维度 直接加上，与输出128匹配即可\n",
+    "    \n",
+    "    _H = tf.matmul(_X,w_h) + b_h #计算wx+b\n",
+    "    \n",
+    "    #切分\n",
+    "    #上面先整体计算，计算完连接下一层时切分成序列，是为了方便计算\n",
+    "    _Hsplit = tf.split(_H,nsteps,0)#切成28行，依次传入28个序列 0按行切，_H切的对象是上一步的计算结果\n",
+    "    #【切分的目的初衷：是为了让一个整体图变成分散有关联的子图，\n",
+    "    #用RNN的LSTM门学习记忆之前的相关序列信息，\n",
+    "    #最终决策图的分类】\n",
+    "    \n",
+    "    #==第二层，接入RNN LSTM门单元==\n",
+    "    with tf.variable_scope(_name,reuse=tf.AUTO_REUSE):\n",
+    "    #变量参数共享，再次运行时变量不会报已定义BUG,\n",
+    "    #旧版注释\n",
+    "    #with tf.variable_scope(_name) as scope:\n",
+    "        #scope.reuse_variables()\n",
+    "        \n",
+    "        #【1、先处理门控lstm_cell 前一序列的中间结果按保留率保留，tf.nn.rnn_cell.BasicLSTMCell 或rnn.BasicLSTMCell】\n",
+    "        lstm_cell = tf.nn.rnn_cell.BasicLSTMCell(dimhidden,forget_bias=1.0)#维度尺寸 隐层神经元大小128，forget_bias 保留率，一开始全保留\n",
+    "        #【2、组建RNN神经网络,这里需组合前面门控取得的前一序列中间结果，\n",
+    "        #和上一步计算的wx+b结果 切分后的序列 _Hsplit。用rnn.static_rnn】\n",
+    "        _LSTM_O,_LSTM_S = rnn.static_rnn(lstm_cell,_Hsplit,dtype = tf.float32)\n",
+    "        #输出结果：两部分，本步结果和中间计算结果】\n",
+    "    \n",
+    "    #==第三层，取最终结果==\n",
+    "    w_o = tf.Variable(tf.random_normal([dimhidden,dimoutput]))#[输入隐层维度128，输出10分类]\n",
+    "    w_b = tf.Variable(tf.random_normal([dimoutput]))\n",
+    "    #计算wx+b x为上一步的输出结果_LSTM_O,w 为\n",
+    "    _O_pred = tf.matmul(_LSTM_O[-1],w_o) + w_b\n",
+    "    #[-1]只取最后一次的_LSTM_O即可，前面的已通过每一步LSTM门控保留中间结果累加组合到最后了\n",
+    "    \n",
+    "    #==算平均损失、预测准确率==\n",
+    "    #交叉熵损失（softmax在这里整合了，所以上一步pred结果只需wx+b即可，不用接入softmax了\n",
+    "    #分类值处损失没用均方误差，用了交叉熵，因为）\n",
+    "    cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=_O_pred,labels=output))\n",
+    "    #train_op = tf.train.GradientDescentOptimizer(FLAGS.lr).minimize(cost)\n",
+    "    with tf.variable_scope(_name,reuse=tf.AUTO_REUSE):#参数共享，防止多次运行报错已定义\n",
+    "        train_op = tf.train.AdamOptimizer(FLAGS.lr).minimize(cost)\n",
+    "        #可选优化器：梯度下降优化器tf.train.GradientDescentOptimizer，\n",
+    "        #和tf.train.AdamOptimizer，大概比较Adam精度高些\n",
+    "    correct_preds = tf.equal(tf.argmax(_O_pred,1),tf.argmax(output,1))#预测值最大概率（分类）与真值最大概率（分类）一致说明预测正确\n",
+    "    accuracy = tf.reduce_mean(tf.cast(correct_preds,'float'))\n",
+    "    \n",
+    "    return train_op,cost,accuracy,inputs,output\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -147,51 +256,108 @@
       "KEEP_DROP=0.7\n",
       "LR=0.001\n",
       "NUM_CLASSES=10\n",
+      "==CNN输入== Tensor(\"Placeholder_20:0\", shape=(?, 784), dtype=float32)\n",
+      "==CNN输入变形最终一维== Tensor(\"Reshape_20:0\", shape=(?, 28, 28, 1), dtype=float32)\n",
+      "==RNN 输入：== Tensor(\"Placeholder_22:0\", shape=(?, 784), dtype=float32)\n",
+      "==RNN 输入变形：== Tensor(\"Reshape_22:0\", shape=(?, 28, 28), dtype=float32)\n",
+      "==RNN transpose inputs换位== Tensor(\"transpose_6:0\", shape=(28, ?, 28), dtype=float32)\n",
+      "==RNN inputs reshape变形最终一维== Tensor(\"Reshape_23:0\", shape=(?, 28), dtype=float32)\n",
+      "\n",
+      "==CNN训练结果==\n",
+      "\n",
       "==epoch: 0/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 6.946770 训练准确率 : 0.250000\n",
+      "平均损失 : 7.572825 训练准确率 : 0.062500\n",
       "==epoch: 1/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 2.629630 训练准确率 : 0.437500\n",
+      "平均损失 : 2.891717 训练准确率 : 0.375000\n",
       "==epoch: 2/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 1.856184 训练准确率 : 0.375000\n",
+      "平均损失 : 1.995711 训练准确率 : 0.500000\n",
       "==epoch: 3/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 1.473435 训练准确率 : 0.500000\n",
+      "平均损失 : 1.712369 训练准确率 : 0.562500\n",
       "==epoch: 4/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 1.373744 训练准确率 : 0.562500\n",
+      "平均损失 : 1.294055 训练准确率 : 0.437500\n",
       "==epoch: 5/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 1.171537 训练准确率 : 0.437500\n",
+      "平均损失 : 1.073926 训练准确率 : 0.437500\n",
       "==epoch: 6/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 1.099165 训练准确率 : 0.625000\n",
+      "平均损失 : 1.081888 训练准确率 : 0.625000\n",
       "==epoch: 7/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 0.852211 训练准确率 : 0.625000\n",
+      "平均损失 : 0.693930 训练准确率 : 0.875000\n",
       "==epoch: 8/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 0.900321 训练准确率 : 0.562500\n",
+      "平均损失 : 0.935187 训练准确率 : 0.812500\n",
       "==epoch: 9/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 0.812786 训练准确率 : 0.812500\n",
+      "平均损失 : 0.668542 训练准确率 : 0.687500\n",
       "==epoch: 10/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 0.716849 训练准确率 : 0.687500\n",
+      "平均损失 : 0.718545 训练准确率 : 0.750000\n",
       "==epoch: 11/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 0.751677 训练准确率 : 0.750000\n",
+      "平均损失 : 0.817947 训练准确率 : 0.750000\n",
       "==epoch: 12/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 0.746090 训练准确率 : 0.875000\n",
+      "平均损失 : 0.476665 训练准确率 : 1.000000\n",
       "==epoch: 13/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 0.481871 训练准确率 : 0.750000\n",
+      "平均损失 : 0.652615 训练准确率 : 0.750000\n",
       "==epoch: 14/15\n",
       "batch:10/10 16 55000\n",
-      "平均损失 : 0.490636 训练准确率 : 0.937500\n"
+      "平均损失 : 0.591692 训练准确率 : 0.750000\n",
+      "\n",
+      "==RNN LSTM训练结果==\n",
+      "\n",
+      "==epoch: 0/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 2.877122 训练准确率 : 0.250000\n",
+      "==epoch: 1/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 2.142676 训练准确率 : 0.562500\n",
+      "==epoch: 2/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 1.740861 训练准确率 : 0.437500\n",
+      "==epoch: 3/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 1.637717 训练准确率 : 0.687500\n",
+      "==epoch: 4/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 1.385431 训练准确率 : 0.437500\n",
+      "==epoch: 5/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 1.100505 训练准确率 : 0.687500\n",
+      "==epoch: 6/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 1.169699 训练准确率 : 0.750000\n",
+      "==epoch: 7/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 0.934472 训练准确率 : 0.687500\n",
+      "==epoch: 8/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 1.017421 训练准确率 : 0.625000\n",
+      "==epoch: 9/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 1.024429 训练准确率 : 0.750000\n",
+      "==epoch: 10/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 0.979090 训练准确率 : 0.750000\n",
+      "==epoch: 11/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 1.137784 训练准确率 : 0.750000\n",
+      "==epoch: 12/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 0.899709 训练准确率 : 0.625000\n",
+      "==epoch: 13/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 0.854371 训练准确率 : 0.625000\n",
+      "==epoch: 14/15\n",
+      "batch:10/10 16 55000\n",
+      "平均损失 : 0.816641 训练准确率 : 0.687500\n"
      ]
     },
     {
@@ -202,22 +368,44 @@
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "G:\\Users\\Administrator\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3299: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
     }
    ],
    "source": [
-    "#==用CNN做上图点分类任务==\n",
+    "#==训练神经网络图片分类任务==\n",
     "\n",
-    "#tf.reset_default_graph()#重置图\n",
+    "#训练函数\n",
+    "def train(sess,FLAGS,train_op,cost,accuracy,inputs,output):\n",
+    "    #=开始训练=\n",
+    "    # begin train\n",
+    "    for epoch in range(FLAGS.epochs):  \n",
+    "        print(\"==epoch: %d/%d\"%(epoch,FLAGS.epochs))\n",
+    "        #totalBatch = int(mnist.train.num_examples / FLAGS.batch_size)\n",
+    "        avg_cost = 0 #平均损失\n",
+    "        totalBatch = 10\n",
     "\n",
-    "def main(_):\n",
+    "        for k in range(totalBatch):\n",
+    "            batch_xs,batch_ys = mnist.train.next_batch(FLAGS.batch_size)\n",
+    "            #print(\"==batch_xs.shape==\",batch_xs.shape)\n",
+    "            #print(\"==batch_ys.shape==\",batch_ys.shape)\n",
+    "            #【sess 处理上面 train_op(梯度下降优化迭代器)#logits分类结果,交差，acc精度等计算结果,\n",
+    "            #返回loss值，精确度等\n",
+    "            #并feed tensorflow数据，在这一步实现】\n",
+    "            #_, network, loss, acc = sess.run([train_op, _pred, cost, accuracy], \n",
+    "            #                                 feed_dict={inputs: batch[0], output: batch[1]})\n",
+    "            #【可以在一起run，也可以分开，如下】：\n",
+    "            feed_dict_v = {inputs: batch_xs, output: batch_ys}\n",
+    "            sess.run(train_op,feed_dict=feed_dict_v)\n",
+    "            avg_cost += sess.run(cost,feed_dict=feed_dict_v)/totalBatch\n",
+    "            acc = sess.run(accuracy,feed_dict=feed_dict_v)\n",
+    "            #【需要返回值的函数就要用sess run一下，为placeholder占位的inputs output赋值\n",
+    "            #精确度和loss的结果是在这里返回的，要用sess.run一下，返回的是相当于函数执行的结果，不能直接取】\n",
+    "        print(\"batch:%d/%d %d %d\"%(k+1,totalBatch,FLAGS.batch_size,mnist.train.num_examples))    \n",
+    "        print('平均损失 : %f 训练准确率 : %f'% (avg_cost, acc))\n",
+    "    #print('测试准确率:', accuracy.eval({inputs: mnist.test.images, output: mnist.test.labels}))\n",
+    "\n",
+    "#参数定义\n",
+    "def defineParams():\n",
+    "    #tf.reset_default_graph()#重置图\n",
     "    #train=True\n",
     "    FLAGS = tf.app.flags.FLAGS\n",
     "    #if len(FLAGS) <=4:#【解决二次运行报错定义两次BUG:\n",
@@ -227,6 +415,9 @@
     "    #tf.flags.FLAGS.__delattr__('image_width')\n",
     "    #tf.flags.FLAGS.__delattr__('image_height')\n",
     "    #tf.flags.FLAGS.__delattr__('num_classes')\n",
+    "    #第三种方法：可用with tf.variable_scope(_name) as scope:结合scope.reuse_variables() 变量共享解决\n",
+    "    #参考 https://www.cnblogs.com/hellcat/p/9194110.html\n",
+    "    \n",
     "    for key in sorted(FLAGS):\n",
     "        tf.flags.FLAGS.__delattr__(key)#删除定义的所有key,再定义\n",
     "    \n",
@@ -258,12 +449,10 @@
     "        value = FLAGS[key].value\n",
     "        print(\"{}={}\".format(key.upper(),value)) \n",
     "        \n",
-    "    #输入输出初始化 x y\n",
-    "    inputs = tf.placeholder(dtype=tf.float32,shape=[None,FLAGS.image_width*FLAGS.image_height])\n",
-    "    output = tf.placeholder(dtype=tf.int32, shape=[None, FLAGS.num_classes])\n",
-    "    \n",
-    "    #==使用神经网络CNN函数==\n",
-    "    train_op,cost,accuracy = CNN(inputs,output,FLAGS)\n",
+    "    return FLAGS    \n",
+    "\n",
+    "#tensorflow session run处理部分\n",
+    "def runNN(text,FLAGS,train_op,cost,accuracy,inputs,output):\n",
     "    \n",
     "    #==tensorflow sess处理执行部分==\n",
     "    \n",
@@ -286,37 +475,25 @@
     "        #保存模型,就是sess\n",
     "        #saver.restore(sess,FLAGS.checkpoints)#checkpoints保存路径\n",
     "        \n",
-    "        #=开始训练=\n",
-    "        # begin train\n",
-    "        for epoch in range(FLAGS.epochs):  \n",
-    "            print(\"==epoch: %d/%d\"%(epoch,FLAGS.epochs))\n",
-    "            #totalBatch = int(mnist.train.num_examples / FLAGS.batch_size)\n",
-    "            avg_cost = 0 #平均损失\n",
-    "            totalBatch = 10\n",
-    "            for k in range(totalBatch):\n",
-    "                batch_xs,batch_ys = mnist.train.next_batch(FLAGS.batch_size)\n",
-    "                #print(\"==batch_xs.shape==\",batch_xs.shape)\n",
-    "                #print(\"==batch_ys.shape==\",batch_ys.shape)\n",
-    "                #【sess 处理上面 train_op(梯度下降优化迭代器)#logits分类结果,交差，acc精度等计算结果,\n",
-    "                #返回loss值，精确度等\n",
-    "                #并feed tensorflow数据，在这一步实现】\n",
-    "                #_, network, loss, acc = sess.run([train_op, _pred, cost, accuracy], \n",
-    "                #                                 feed_dict={inputs: batch[0], output: batch[1]})\n",
-    "                #【可以在一起run，也可以分开，如下】：\n",
-    "                feed_dict_v = {inputs: batch_xs, output: batch_ys}\n",
-    "                sess.run(train_op,feed_dict=feed_dict_v)\n",
-    "                avg_cost += sess.run(cost,feed_dict=feed_dict_v)/totalBatch\n",
-    "                acc = sess.run(accuracy,feed_dict=feed_dict_v)\n",
-    "                #【需要返回值的函数就要用sess run一下，为placeholder占位的inputs output赋值\n",
-    "                #精确度和loss的结果是在这里返回的，要用sess.run一下，返回的是相当于函数执行的结果，不能直接取】\n",
-    "            print(\"batch:%d/%d %d %d\"%(k+1,totalBatch,FLAGS.batch_size,mnist.train.num_examples))    \n",
-    "            print('平均损失 : %f 训练准确率 : %f'% (avg_cost, acc))\n",
-    "        #print('测试准确率:', accuracy.eval({inputs: mnist.test.images, output: mnist.test.labels}))\n",
-    "            \n",
-    "\n",
+    "        print('\\n=='+text+'==\\n')\n",
+    "        train(sess,FLAGS,train_op,cost,accuracy,inputs,output)\n",
+    "        \n",
+    "        \n",
+    "#主函数\n",
+    "def main(_):#参数不能为空，要指定一个占位\n",
+    "    #==取参数==\n",
+    "    FLAGS = defineParams()\n",
+    "    #==训练CNN 注意，训练NN不能放在with see.as_default中==\n",
+    "    train_op,cost,accuracy,inputs,output = CNN(FLAGS)\n",
+    "    #==训练RNN LSTM==\n",
+    "    train_op_rnn,cost_rnn,accuracy_rnn,inputs_rnn,output_rnn = RNN(FLAGS,'basic')  \n",
+    "    \n",
+    "    runNN('CNN训练结果',FLAGS,train_op,cost,accuracy,inputs,output)\n",
+    "    runNN('RNN LSTM训练结果',FLAGS,train_op_rnn,cost_rnn,accuracy_rnn,inputs_rnn,output_rnn)\n",
+    "        \n",
     "if __name__ == '__main__':\n",
     "    \n",
-    "    tf.app.run()\n"
+    "    tf.app.run()# 执行main函数\n"
    ]
   },
   {
@@ -324,15 +501,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#【以上做了几个优化，有利于提升模型精确度：\n",
-    "#关键处BUG修改：最后一层只需算完add+，即用于 softmax_cross_entropy_with_logits 交叉熵运算，\n",
-    "#不要先在外面加一层softmax】\n",
-    "#还做了以下几个优化\n",
-    "#b，由固定常数变为正态分布随机数random_normal([32],stddev=0.1\n",
-    "#b的+用了tf.nn.bias_add 最后一层用了tf.add，因为维度只有一维了\n",
-    "#epoch和batch_size的调整之类"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -341,10 +510,8 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "==RNN循环神经网络 图象识别 精简骨架==\n",
-    "\n",
+    "==Attention模型==\n",
     "【持续更新中，请稍假关注】\n",
-    "\n",
     "'''"
    ]
   }
