--- a/NN_img_all.ipynb
+++ b/NN_img_all.ipynb
@@ -263,7 +263,7 @@
       "==RNN transpose inputs换位== Tensor(\"transpose_6:0\", shape=(28, ?, 28), dtype=float32)\n",
       "==RNN inputs reshape变形最终一维== Tensor(\"Reshape_23:0\", shape=(?, 28), dtype=float32)\n",
       "\n",
-      "==CNN训练结果==\n",
+      "==【CNN训练结果】==\n",
       "\n",
       "==epoch: 0/15\n",
       "batch:10/10 16 55000\n",
@@ -311,7 +311,7 @@
       "batch:10/10 16 55000\n",
       "平均损失 : 0.591692 训练准确率 : 0.750000\n",
       "\n",
-      "==RNN LSTM训练结果==\n",
+      "==【RNN LSTM训练结果】==\n",
       "\n",
       "==epoch: 0/15\n",
       "batch:10/10 16 55000\n",
@@ -475,7 +475,7 @@
     "        #保存模型,就是sess\n",
     "        #saver.restore(sess,FLAGS.checkpoints)#checkpoints保存路径\n",
     "        \n",
-    "        print('\\n=='+text+'==\\n')\n",
+    "        print('\\n==【'+text+'】==\\n')\n",
     "        train(sess,FLAGS,train_op,cost,accuracy,inputs,output)\n",
     "        \n",
     "        \n",
