--- a/NN_img_all.ipynb
+++ b/NN_img_all.ipynb
@@ -496,12 +496,49 @@
     "    tf.app.run()# 执行main函数\n"
    ]
   },
-  {
+{
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "RNN LSTM 接 Attention处理\n",
+    "\"\"\"\n",
+    "\n",
+    "def attention(_LSTM_O):#_LSTM_O为RNN 中最后一层LSTM的输出\n",
+    "\n",
+    "    # 最后一层LSTM的神经元数量\n",
+    "    hiddenSize = 128\n",
+    "\n",
+    "    # 初始化w\n",
+    "    W = tf.Variable(tf.random_normal([hiddenSize], stddev=0.1))\n",
+    "\n",
+    "    # LSTM的输出接激活函数转为非线性\n",
+    "    M = tf.tanh(_LSTM_O)\n",
+    "\n",
+    "    # reshape M W拉平变一维，做矩阵乘做内积\n",
+    "    newM = tf.matmul(tf.reshape(M, [-1, hiddenSize]), tf.reshape(W, [-1, 1]))\n",
+    "\n",
+    "    # reshpae newM拉平 对结果接softmax分类器\n",
+    "    restoreM = tf.reshape(newM, [-1, 10])\n",
+    "\n",
+    "    # 将上一步结果接softmax 归一化 变到0 到1 之间的百分比\n",
+    "    alpha = tf.nn.softmax(restoreM)\n",
+    "\n",
+    "    # 用上面分类概率值alpha的值对_LSTM_O 加权求内积\n",
+    "    r = tf.matmul(tf.transpose(_LSTM_O, [0, 2, 1]), tf.reshape(alpha, [-1, 10, 1]))\n",
+    "\n",
+    "    # 将三维压缩成二维sequeezeR=[batch_size, hidden_size]\n",
+    "    sequeezeR = tf.squeeze(r)\n",
+    "\n",
+    "    sentenceRepren = tf.tanh(sequeezeR)\n",
+    "\n",
+    "    # dropout处理\n",
+    "    output = tf.nn.dropout(sentenceRepren, 0.7)\n",
+    "\n",
+    "    return output"
+   ]
   },
   {
    "cell_type": "code",
